# COAL

./: CMakeLists.txt  Dockerfile
src/: main.cpp
